fix unnecessary invisible padding of child element

--- a/04 bookmark website/style.css
+++ b/04 bookmark website/style.css
@@ -29,7 +29,6 @@ li{
 li a {
     color: #217ee2;
     text-decoration: none;
-    padding: 1.25rem 0.25rem;
     width: 80vw;
 }
 
